added link to my github profile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="attribution">
     <span>by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></span>
-    <span>Coded by <a href="#">Eyu Leo</a></span>
+    <span>Coded by <a href=https://github.com/Eyuleo">Eyu Leo</a></span>
   </div>
 </body>
 </html>
